# Shift-Engine

./: .gitignore  CMakeLists.txt  GenerateSolution.bat  GenerateSolution_Editor_ExampleGame.bat  LICENSE.md  README.md
Engine/Source/: CMakeLists.txt
Engine/Source/Core/Application/: CMakeLists.txt  SAF_Framework.cpp  SAF_Framework.h
Engine/Source/Core/Application/Win64/: SAF_Framework_Win64.cpp  SAF_Framework_Win64.h  SAF_Window_Win64.cpp  SAF_Window_Win64.h
Engine/Source/Core/Audio/: CMakeLists.txt
Engine/Source/Core/Common/: CMakeLists.txt  SC_Base.h  SC_BlockAllocator.cpp  SC_BlockAllocator.h  SC_ConfigManager.cpp  SC_ConfigManager.h  SC_Console.h  SC_GlobalData.cpp  SC_GlobalData.h  SC_Logger.cpp  SC_Logger.h  SC_MemoryAllocator.cpp  SC_MemoryAllocator.h  SC_Message.h  SC_MessageListener.h  SC_MessageQueue.h  SC_Module.cpp  SC_NewDeleteOperators.h  SC_Profiler.cpp  SC_ResourceManager.cpp  SC_ResourceManager.h  SC_ThreadPool.h
Engine/Source/Core/Common/Configuration/: SC_CommandLine.cpp  SC_CommandLine.h
Engine/Source/Core/Common/Console/: SC_Console.cpp  SC_Console.h
Engine/Source/Core/Common/Logging/: SC_Logger.cpp  SC_Logger.h
Engine/Source/Core/Common/MessageQueue/: SC_Message.h  SC_MessageListener.cpp  SC_MessageQueue.cpp  SC_MessageQueue.h
Engine/Source/Core/Common/Module/: SC_Module.h  SC_ModuleManager.cpp  SC_ModuleManager.h
Engine/Source/Core/Common/NodeGraph/: SC_Node.cpp  SC_Node.h  SC_NodeGraph.cpp  SC_NodeGraph.h  SC_NodePin.cpp  SC_NodePin.h
Engine/Source/Core/Common/Profiling/: SC_Profiler.cpp  SC_Profiler.h
Engine/Source/Core/Common/Random/: SC_Random.cpp  SC_Random.h
Engine/Source/Core/Common/ResourceManagement/: SC_ResourceManager.h
Engine/Source/Core/Common/ThreadPool/: SC_ThreadPool.cpp  SC_ThreadPool.h
Engine/Source/Core/EngineTypes/: CMakeLists.txt  Core_Types_Natvis.natvis  SC_AABB.h  SC_Array.h  SC_Map.h  SC_Math.cpp  SC_Math.h  SC_Matrix.h  SC_MatrixTypes.h  SC_Pair.h  SC_Plane.h  SC_Quaternion.h  SC_Queue.h  SC_Sphere.h  SC_StringHelpers.cpp  SC_TypesInclude.h  SC_UUID.h  SC_Vector4.h
Engine/Source/Core/EngineTypes/Containers/: SC_Array.h  SC_HybridArray.h  SC_Queue.h  SC_RingArray.h  SC_StaticArray.h  SC_Tuple.h
Engine/Source/Core/EngineTypes/Functional/: SC_Function.h  SC_Pointers.h  SC_Ref.cpp  SC_Ref.h  SC_Slot.h
Engine/Source/Core/EngineTypes/Geometry/: SC_AABB.h  SC_Plane.h  SC_Sphere.h
Engine/Source/Core/EngineTypes/Identifiers/: SC_UUID.cpp  SC_UUID.h
Engine/Source/Core/EngineTypes/Math/: SC_Math.cpp  SC_Math.h  SC_Matrix.h  SC_Quaternion.cpp  SC_Quaternion.h  SC_Vector.h  SC_Vector2.h  SC_Vector4.h
Engine/Source/Core/EngineTypes/Misc/: SC_Color.h
Engine/Source/Core/EngineTypes/String/: SC_StringHelpers.cpp  SC_StringHelpers.h
Engine/Source/Core/FacadeGUI/: CMakeLists.txt  SF_Manager.cpp  SF_Manager.h  SF_Widget.cpp  SF_Widget.h  SF_Window.cpp  SF_Window.h
Engine/Source/Core/InputOutput/: CMakeLists.txt
Engine/Source/Core/InputOutput/File/: SC_EnginePaths.cpp  SC_EnginePaths.h  SC_File.cpp  SC_File.h  SC_FileWatcher.cpp  SC_FileWatcher.h
Engine/Source/Core/InputOutput/InputDevice/: SC_InputDevice.cpp  SC_InputDevice.h  SC_InputDevice_PCGamepad.cpp  SC_InputDevice_PCGamepad.h  SC_InputDevice_PCKeyboard.cpp  SC_InputDevice_PCKeyboard.h  SC_InputDevice_PCMouse.cpp  SC_InputDevice_PCMouse.h
Engine/Source/Core/InputOutput/Json/: Json.hpp  SC_Json.h
Engine/Source/Core/InputOutput/KeyCodes/: SC_KeyCodes.h
Engine/Source/Core/InputOutput/SRP/: SC_SRP.h
Engine/Source/Core/Memory/: CMakeLists.txt
Engine/Source/Core/Memory/Allocators/: SC_MemoryAllocator.cpp  SC_MemoryAllocator.h
Engine/Source/Core/Memory/GlobalData/: SC_GlobalData.cpp  SC_GlobalData.h
Engine/Source/Core/Memory/Misc/: SC_NewDeleteOperators.h
Engine/Source/Core/Network/: CMakeLists.txt
Engine/Source/Core/Physics/: CMakeLists.txt
Engine/Source/Core/Platform/: CMakeLists.txt  SC_Assert.cpp  SC_Assert.h  SC_Atomics.h  SC_Atomics_Win64.cpp  SC_Atomics_Win64.h  SC_AutoLock.h  SC_CommonFunctions.cpp  SC_CommonFunctions.h  SC_Event.cpp  SC_Event.h  SC_Future.h  SC_MemoryFunctions.cpp  SC_MemoryFunctions.h  SC_Mutex.h  SC_MutexImpl.h  SC_Platform.h  SC_Relocation.cpp  SC_Semaphore.cpp  SC_Thread.h  SC_Time.cpp  SC_TypeTraits.h  SC_VectorInstructions.h  SC_VectorInstructions_Generic.h
Engine/Source/Core/Platform/Async/: SC_AutoLock.h  SC_Event.cpp  SC_Event.h  (+11 more)
Engine/Source/Core/Render/: CMakeLists.txt
Engine/Source/Core/RenderCore/: CMakeLists.txt
Engine/Source/Core/Scripting/: CMakeLists.txt  SSC_Defines.h  SSC_ScriptCore_Mono.cpp  SSC_ScriptCore_Mono.h  SSC_ScriptManager.cpp  SSC_ScriptManager.h
Engine/Source/Editor/: CMakeLists.txt  SED_Asset.cpp  SED_Asset.h  SED_AssetBrowser.cpp  SED_AssetBrowser.h  SED_AssetImporter.cpp  SED_AssetImporter.h  SED_AssimpImporter.cpp  SED_AssimpImporter.h  SED_Camera.cpp  SED_Camera.h  SED_ContentBrowserPanel.cpp  SED_ContentBrowserPanel.h  SED_ContentBrowserWindow.cpp  SED_ContentBrowserWindow.h  SED_Editor.cpp  SED_Editor.h  SED_Icons.cpp  SED_Icons.h  SED_ImportDataConverters.cpp  SED_ImportDataConverters.h  SED_MaterialEditor.cpp  SED_MaterialEditor.h  SED_MenuBar.cpp  SED_MenuBar.h  SED_MetricsWindow.cpp  SED_MetricsWindow.h  SED_NodeGraphTools.cpp  SED_NodeGraphTools.h  SED_Panel.h  SED_PropertiesPanel.cpp  SED_PropertiesPanel.h  SED_PropertiesWindow.cpp  SED_PropertiesWindow.h  SED_Property.h  SED_PropertyDrawDeclarations.cpp  SED_PropertyDrawDeclarations.h  SED_Thumbnail.cpp  SED_Thumbnail.h  SED_TransformationGizmo.cpp  (+15 more)
Engine/Source/Modules/Application/: CMakeLists.txt  SAF_Framework.cpp  SAF_Framework.h
Engine/Source/Modules/Audio/: CMakeLists.txt
Engine/Source/Modules/GameFramework/: CMakeLists.txt  SGF_Framework.cpp  SGF_Framework.h
Engine/Source/Modules/Graphics/: CMakeLists.txt  SGfx_InstanceData.cpp  SGfx_InstanceData.h
Engine/Source/Modules/Physics/: CMakeLists.txt
Game/Source/: CMakeLists.txt  GameInstance.cpp  GameInstance.h  main.cpp
Samples/ExampleGame/Source/: CMakeLists.txt  GameClient.cpp  GameClient.h  GameInstance.cpp  GameInstance.h  main.cpp
(+819 files in other folders)
