
##################################
# Engine Core sub-directories
add_subdirectory(./Core/Platform)
add_subdirectory(./Core/EngineTypes)
add_subdirectory(./Core/Memory)
add_subdirectory(./Core/Common)
add_subdirectory(./Core/Render)
add_subdirectory(./Core/Network)

##################################
# Engine Modules sub-directories
add_subdirectory(./Modules/Audio)
add_subdirectory(./Modules/Graphics)
add_subdirectory(./Modules/GameFramework)
add_subdirectory(./Modules/Physics)