
file(GLOB_RECURSE SCRIPTCORE_FILES CONFIGURE_DEPENDS "*.cs")

add_library(Shift-ScriptCore SHARED ${SCRIPTCORE_FILES})
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SCRIPTCORE_FILES})
set_property(TARGET Shift-ScriptCore PROPERTY FOLDER "1. Core") 

set_target_properties(Shift-ScriptCore
    PROPERTIES
    LINKER_LANGUAGE CSharp
    LIBRARY_OUTPUT_DIRECTORY         "${GAME_DATA_DIRECTORY}/Scripts"
    LIBRARY_OUTPUT_DIRECTORY_DEBUG   "${GAME_DATA_DIRECTORY}/Scripts"
    LIBRARY_OUTPUT_DIRECTORY_RELEASE "${GAME_DATA_DIRECTORY}/Scripts"
    RUNTIME_OUTPUT_DIRECTORY         "${GAME_DATA_DIRECTORY}/Scripts"
    RUNTIME_OUTPUT_DIRECTORY_DEBUG   "${GAME_DATA_DIRECTORY}/Scripts"
    RUNTIME_OUTPUT_DIRECTORY_RELEASE "${GAME_DATA_DIRECTORY}/Scripts"
)